# ADS-0

./: CMakeLists.txt  README.md
.github/workflows/: cppcheck.yml  cpplint.yml  release.yml
ADS-0/: ADS-0.sln  ADS-0.vcxproj
ADS-0/ADS-0/: ADS-0.vcxproj  ADS-0.vcxproj.filters  alg.cpp
ADS-0/ADS-0/x64/Debug/: ADS-0.exe.recipe  ADS-0.ilk  vc143.idb
ADS-0/ADS-0/x64/Debug/ADS-0.tlog/: ADS-0.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
AlgEvkl/: AlgEvkl.sln
AlgEvkl/AlgEvkl/: AlgEvkl.cpp  AlgEvkl.vcxproj  AlgEvkl.vcxproj.filters
AlgEvkl/AlgEvkl/x64/Debug/: AlgEvkl.exe.recipe  AlgEvkl.ilk  vc143.idb
AlgEvkl/AlgEvkl/x64/Debug/AlgEvkl.tlog/: AlgEvkl.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: alg.h
src/: CMakeLists.txt  alg.cpp  checker.py  main.cpp
src/output/: main
src/output/main.dSYM/Contents/Resources/DWARF/: main
src/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
test/: CMakeLists.txt  tests.cpp
